--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout title="Coming soon | More4Nature">
 	<div class="flex min-h-dvh flex-col">
-		<header class="p-4 md:p-10">
+		<!-- <header class="p-4 md:p-10">
 			<picture>
 				<source
 					srcset="/logo.svg"
@@ -25,7 +25,7 @@ import Layout from '../layouts/Layout.astro';
 					alt="Logo More4Nature"
 				/>
 			</picture>
-		</header>
+		</header> -->
 		<main class="m-auto flex max-w-7xl flex-1 items-center p-4 md:py-10 lg:px-0">
 			<div class="grid grid-cols-12">
 				<div class="col-span-12 space-y-8 text-center lg:col-span-8 lg:col-start-3">
