updates logos and backgrounds

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,31 +4,31 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout title="Coming soon | More4Nature">
 	<div class="flex min-h-dvh flex-col">
-		<!-- <header class="p-4 md:p-10">
+		<header class="p-4 md:p-10">
 			<picture>
 				<source
-					srcset="/logo.svg"
+					srcset="/logo-desktop.svg"
 					media="(min-width: 1024px)"
-					width="189"
-					height="40"
+					width="263"
+					height="68"
 				/>
 				<source
-					srcset="/logo.svg"
+					srcset="/logo-mobile.svg"
 					media="(max-width: 1023px)"
 					width="117"
 					height="24"
 				/>
 				<img
-					src="/logo.svg"
-					width="189"
-					height="40"
+					src="/logo-desktop.svg"
+					width="263"
+					height="68"
 					alt="Logo More4Nature"
 				/>
 			</picture>
-		</header> -->
+		</header>
 		<main class="m-auto flex max-w-7xl flex-1 items-center p-4 md:py-10 lg:px-0">
 			<div class="grid grid-cols-12">
-				<div class="col-span-12 space-y-8 text-center lg:col-span-8 lg:col-start-3">
+				<div class="col-span-12 space-y-8 text-center text-blue-950 lg:col-span-8 lg:col-start-3">
 					<h1 class="text-2xl md:text-8xl">Coming soon</h1>
 					<p class="text-sm md:text-2xl">
 						The more4nature programme is on a mission to trigger transformative change in
@@ -40,8 +40,8 @@ import Layout from '../layouts/Layout.astro';
 		</main>
 		<footer class="p-4 md:p-10">
 			<div class="float-right flex max-w-[470px] items-center space-x-2 text-right">
-				<div class="font-serif text-2xs lg:text-xs">
-					This project has received funding from the European Union’s Horizon Europe research and
+				<div class="font-serif text-2xs text-blue-950 lg:text-xs">
+					This project has received funding from the European Union&apos;s Horizon Europe research and
 					innovation programme under grant agreement No. 101133983
 				</div>
 				<picture class="shrink-0">
