--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,13 +24,13 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	body {
-		background-image: url(/bg-mobile.webp);
+		background-image: url(/bg-mobile.svg);
 		@apply bg-blue-500 bg-cover bg-fixed bg-center bg-no-repeat font-sans text-white antialiased;
 	}
 
 	@media only screen and (min-width: 1023px) {
 		body {
-			background-image: url(/bg-desktop.webp);
+			background-image: url(/bg-desktop.svg);
 		}
 	}
 </style>
