--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,9 +31,8 @@ import Layout from '../layouts/Layout.astro';
 				<div class="col-span-12 space-y-8 text-center text-blue-950 lg:col-span-8 lg:col-start-3">
 					<h1 class="text-2xl md:text-8xl">Coming soon</h1>
 					<p class="text-sm md:text-2xl">
-						The more4nature programme is on a mission to trigger transformative change in
-						conservation efforts regarding zero pollution, biodiversity protection and
-						deforestation prevention by strengthening the role of citizens and communities.
+						We are on a mission to trigger transformative change in conservation efforts regarding zero pollution,
+						biodiversity protection and deforestation prevention by strengthening the role of citizens and communities.
 					</p>
 				</div>
 			</div>
