--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="The more4nature programme is on a mission to trigger transformative change in conservation efforts regarding zero pollution, biodiversity protection and deforestation prevention by strengthening the role of citizens and communities." />
+		<meta name="description" content="We are on a mission to trigger transformative change in conservation efforts regarding zero pollution, biodiversity protection and deforestation prevention by strengthening the role of citizens and communities." />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/ico" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
