--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Coming soon | More4Nature">
+<Layout title="Coming soon | more4nature">
 	<div class="flex min-h-dvh flex-col">
 		<header class="p-4 md:p-10">
 			<picture>
@@ -22,7 +22,7 @@ import Layout from '../layouts/Layout.astro';
 					src="/logo-desktop.svg"
 					width="263"
 					height="68"
-					alt="Logo More4Nature"
+					alt="Logo more4nature"
 				/>
 			</picture>
 		</header>
