--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '@fontsource/lexend';
+import '@fontsource/merriweather';
 
 interface Props {
 	title: string;
@@ -24,13 +25,6 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	body {
-		background-image: url(/bg-mobile.svg);
-		@apply bg-blue-500 bg-cover bg-fixed bg-center bg-no-repeat font-sans text-white antialiased;
-	}
-
-	@media only screen and (min-width: 1023px) {
-		body {
-			background-image: url(/bg-desktop.svg);
-		}
+		@apply bg-white-900 text-base font-sans antialiased;
 	}
 </style>
