updates NECU partner logo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -104,67 +104,67 @@ import Layout from '../layouts/Layout.astro';
 			<h2 class="text-3xl text-green-900 font-semibold before:w-14 relative before:h-0.5 before:bg-green-900 before:absolute before:-top-3">Partners</h2>
 			<ul class="flex gap-x-5 md:gap-x-10 flex-wrap gap-y-10 md:gap-y-20">
 				<li class="flex items-center justify-center">
-					<div class="bg-ihe bg-contain bg-no-repeat w-[183px] h-[65px]" />
+					<div class="bg-ihe bg-contain bg-no-repeat bg-center w-[183px] h-[65px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-creaf bg-contain bg-no-repeat w-[118px] h-[43px]" />
+					<div class="bg-creaf bg-contain bg-no-repeat bg-center w-[118px] h-[43px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-earthwatch bg-contain bg-no-repeat w-[151px] h-[33px]" />
+					<div class="bg-earthwatch bg-contain bg-no-repeat bg-center w-[151px] h-[33px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-dreamocracy bg-contain bg-no-repeat w-[164px] h-[40px]" />
+					<div class="bg-dreamocracy bg-contain bg-no-repeat bg-center w-[164px] h-[40px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-cw bg-contain bg-no-repeat w-[98px] h-[69px]" />
+					<div class="bg-cw bg-contain bg-no-repeat bg-center w-[98px] h-[69px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-ecsa bg-contain bg-no-repeat w-[170px] h-[37px]" />
+					<div class="bg-ecsa bg-contain bg-no-repeat bg-center w-[170px] h-[37px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-ciencias-lisboa bg-contain bg-no-repeat w-[143px] h-[59px]" />
+					<div class="bg-ciencias-lisboa bg-contain bg-no-repeat bg-center w-[143px] h-[59px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-forest-of-the-world bg-contain bg-no-repeat w-[129px] h-[37px]" />
+					<div class="bg-forest-of-the-world bg-contain bg-no-repeat bg-center w-[129px] h-[37px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-flb-iaac bg-contain bg-no-repeat w-[134px] h-[34px]" />
+					<div class="bg-flb-iaac bg-contain bg-no-repeat bg-center w-[134px] h-[34px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-nilu bg-contain bg-no-repeat w-[43px] h-[46px]" />
+					<div class="bg-nilu bg-contain bg-no-repeat bg-center w-[43px] h-[46px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-nioo bg-contain bg-no-repeat w-[130px] h-[52px]" />
+					<div class="bg-nioo bg-contain bg-no-repeat bg-center w-[130px] h-[52px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-niia bg-contain bg-no-repeat w-[69px] h-[20px]" />
+					<div class="bg-niia bg-contain bg-no-repeat bg-center w-[69px] h-[20px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-nordeco bg-contain bg-no-repeat w-[98px] h-[42px]" />
+					<div class="bg-nordeco bg-contain bg-no-repeat bg-center w-[98px] h-[42px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-polski bg-contain bg-no-repeat w-[109px] h-[55px]" />
+					<div class="bg-polski bg-contain bg-no-repeat bg-center w-[109px] h-[55px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-tracasa-global bg-contain bg-no-repeat w-[112px] h-[35px]" />
+					<div class="bg-tracasa-global bg-contain bg-no-repeat bg-center w-[112px] h-[35px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-ku bg-contain bg-no-repeat w-[118px] h-[43px]" />
+					<div class="bg-ku bg-contain bg-no-repeat bg-center w-[118px] h-[43px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-vms bg-contain bg-no-repeat w-[183px] h-[81px]" />
+					<div class="bg-vms bg-contain bg-no-repeat bg-center w-[183px] h-[81px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-necu bg-contain bg-no-repeat w-[43px] h-[35px]" />
+					<div class="bg-necu bg-contain bg-no-repeat bg-center w-[150px] h-[125px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-unep bg-contain bg-no-repeat w-[108px] h-[32px]" />
+					<div class="bg-unep bg-contain bg-no-repeat bg-center w-[108px] h-[32px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-vito bg-contain bg-no-repeat w-[122px] h-[46px]" />
+					<div class="bg-vito bg-contain bg-no-repeat bg-center w-[122px] h-[46px]" />
 				</li>
 				<li class="flex items-center justify-center">
-					<div class="bg-vizzuality bg-contain bg-no-repeat w-[121px] h-[46px]" />
+					<div class="bg-vizzuality bg-contain bg-no-repeat bg-center w-[121px] h-[46px]" />
 				</li>
 			</ul>
 		</div>
